--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -130,6 +130,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Identity\Role\AppRole.cs" />
+    <Compile Include="Models\Identity\Role\RoleStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
