--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -121,9 +121,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Identity.mdf" />
+    <Content Include="App_Data\Identity.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="App_Data\Identity_log.ldf">
       <DependentUpon>Identity.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
