--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -121,6 +121,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
     <Content Include="App_Data\Identity.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
