--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DataBase\AppDbContext.cs" />
+    <Compile Include="Models\Identity\Account\AccountViewModels.cs" />
     <Compile Include="Models\Identity\Role\AppRole.cs" />
     <Compile Include="Models\Identity\Role\RoleStore.cs" />
     <Compile Include="Models\Identity\User\AppUser.cs" />
