--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -132,6 +132,9 @@
       <DependentUpon>Identity.mdf</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Bootstrap_v3.3.7\css\bootstrap-theme.min.css" />
+    <Content Include="Content\Bootstrap_v3.3.7\css\bootstrap.min.css" />
+    <Content Include="Content\Bootstrap_v3.3.7\js\bootstrap.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -155,6 +158,7 @@
     <Compile Include="Models\Manager\AppSignInManage.cs" />
     <Compile Include="Models\Manager\AppUserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
