--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|Identity.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Identity.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
