--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -11,8 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Identity.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|Identity.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings> 
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
