--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -165,9 +165,9 @@
     <Compile Include="Models\Identity\Role\RoleStore.cs" />
     <Compile Include="Models\Identity\User\User.cs" />
     <Compile Include="Models\Identity\User\UserStore.cs" />
-    <Compile Include="Models\Manager\AppRoleManager.cs" />
-    <Compile Include="Models\Manager\AppSignInManage.cs" />
-    <Compile Include="Models\Manager\AppUserManager.cs" />
+    <Compile Include="Models\Manager\RoleManager.cs" />
+    <Compile Include="Models\Manager\SignInManage.cs" />
+    <Compile Include="Models\Manager\UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
