--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -146,6 +146,9 @@
       <DependentUpon>Identity.mdf</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\solution.png" />
+    <Content Include="Content\project.png" />
+    <Content Include="Content\class.png" />
     <Content Include="Content\Bootstrap\css\bootstrap-theme.min-3.3.7.css" />
     <Content Include="Content\Bootstrap\css\bootstrap.min-3.3.7.css" />
     <Content Include="Content\Bootstrap\css\default\32px.png" />
@@ -156,7 +159,7 @@
     <Content Include="Content\Bootstrap\js\bootstrap.min-3.3.7.js" />
     <Content Include="Content\Bootstrap\js\jquery-3.2.1.min.js" />
     <Content Include="Content\Bootstrap\js\jstree.min.js" />
-    <Content Include="Content\Folder.png" />
+    <Content Include="Content\folder.png" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
